RESOLVED FIXED135977
REGRESSION: Parts of the route/route options windows are invisible at maps.google.com
https://bugs.webkit.org/show_bug.cgi?id=135977
Summary REGRESSION: Parts of the route/route options windows are invisible at maps.go...
alan
Reported 2014-08-15 08:41:51 PDT
Repro steps. 1. go to maps.google.com 2. set up a route between two locations 3. click Route Options -> the other optional routes slide down, and it seems like part of the 'window' content that should be there disappears.
Attachments
Patch (8.82 KB, patch)
2014-08-15 12:36 PDT, alan
no flags
alan
Comment 1 2014-08-15 08:42:03 PDT
Alexey Proskuryakov
Comment 2 2014-08-15 10:23:46 PDT
Is this a duplicate of bug 42154?
Alexey Proskuryakov
Comment 3 2014-08-15 10:24:03 PDT
Sorry, commented in a wrong bug.
alan
Comment 4 2014-08-15 12:36:59 PDT
Andreas Kling
Comment 5 2014-08-15 12:57:26 PDT
Comment on attachment 236670 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=236670&action=review r=me > Source/WebCore/rendering/style/RenderStyle.cpp:822 > + if (isComposited && changeRequiresLayerRepaint(&style, changedContextSensitiveProperties)) > + return changedContextSensitiveProperties & ContextSensitivePropertyClipRect; Ideally this should probably cover more than just the clip rect case, but we can stick with a targeted fix for now.
WebKit Commit Bot
Comment 6 2014-08-15 15:44:04 PDT
Comment on attachment 236670 [details] Patch Clearing flags on attachment: 236670 Committed r172656: <http://trac.webkit.org/changeset/172656>
WebKit Commit Bot
Comment 7 2014-08-15 15:44:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.