REGRESSION: Parts of the route/route options windows are invisible at maps.google.com https://bugs.webkit.org/show_bug.cgi?id=135977 <rdar://problem/17961698>

Reviewed by Andreas Kling.

When the style change requires both layout and repaint, the style diff is set to
'layout is needed' (and masks the repaint change) as normally layout is followed by a repaint.
However, in compositing context, layout may not be followed by repaint, so when the style diff
indicates layout, we need to figure out whether it implies repaint too.
This logic should eventually be moved from RenderElement to RenderLayerModelObject/RenderLayer.
-tracked here: webkit.org/b/135990

Source/WebCore:

Test: compositing/cliprect-and-position-change-on-compositing-layer.html

* rendering/RenderElement.cpp:
(WebCore::RenderElement::setNeedsPositionedMovementLayout):
* rendering/style/RenderStyle.cpp:
(WebCore::RenderStyle::changeRequiresLayerRepaint):
(WebCore::RenderStyle::diffRequiresLayerRepaint):
(WebCore::RenderStyle::diffRequiresRepaint): Deleted.
* rendering/style/RenderStyle.h:
* rendering/style/RenderStyleConstants.h:

LayoutTests:

* compositing/cliprect-and-position-change-on-compositing-layer-expected.html: Added.
* compositing/cliprect-and-position-change-on-compositing-layer.html: Added.


Canonical link: https://commits.webkit.org/153849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172656 268f45cc-cd09-0410-ab3c-d52691b4dbfc